# unified-router

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.example.yml  pyproject.toml  requirements.txt  run_server.py  simulate_user.py  test_chat.py  test_config.py  test_import.py  test_models.py  test_pkg.js  test_resolve.js  test_router.py  test_win.js
src/unified_router/: __init__.py  circuit_breaker.py  cli.py  config.py  main.py  observability.py  plugins.py  provider.py  queue.py  registry.py  registry.yaml  router.py  tracker.py  usage_stats.py
src/unified_router/providers/: cloudflare.py  cohere.py  gemini.py  huggingface.py  openai_compat.py
tests/: test_circuit_breaker.py  test_provider.py  test_router.py
