[project]
name = "unified-router"
version = "2.0.0"
description = "Unified LLM API router — auto-routes requests across all free LLM providers with smart fallback"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "ai", "opencode", "router", "proxy", "provider"]

authors = [
  { name = "Unified Router Team" },
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mrnova420/unified-router"
Issues = "https://github.com/mrnova420/unified-router/issues"

[project.scripts]
unified-router = "unified_router.cli:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unified_router = ["registry.yaml"]
